--- a/kubernetes-setup/master-playbook.yml
+++ b/kubernetes-setup/master-playbook.yml
@@ -117,8 +117,12 @@
       daemon_reload: yes
       state: restarted
 
+  - name: Copy the config command to server location
+    template: src=kubeadm-config.yml dest=./kubeadm-config.yml mode=0777
+
+
   - name: Initialize the Kubernetes cluster using kubeadm
-    command: kubeadm init --apiserver-advertise-address="192.168.50.10" --apiserver-cert-extra-sans="192.168.50.10"  --node-name k8s-master --pod-network-cidr=10.1.0.0/16
+    command: kubeadm init --config kubeadm-config.yml
     
   - name: Setup kubeconfig for vagrant user
     command: "{{ item }}"
@@ -139,6 +143,12 @@
     command: kubeadm token create --print-join-command
     register: join_command
 
+  - name: Replace config
+    replace:
+      path: /var/lib/kubelet/config.yaml
+      regexp: '^cgroupDriver:.*$'
+      replace: "cgroupDriver: systemd"
+
   - name: Copy join command to local file
     delegate_to: localhost
     become: false
@@ -149,6 +159,15 @@
   - name: Add dashboard
     become: false
     command: kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.0.0/aio/deploy/recommended.yaml
+
+  - name: Copy admim user config
+    become: false
+    copy: src=./dashboard-adminuser.yml dest=dashboard-adminuser.yml mode=0777 
+
+  - name: Install admin user
+    become: false
+    command: kubectl apply -f dashboard-adminuser.yml
+
 
   - name: Get config command
     become: false
